Updated WNS flow and minor fixes. Updated to .NET Framework 4.5.

--- a/Source/Assets/Server/Notifications.Backend/Notifications.Backend/Views/PushNotification/Index.cshtml
+++ b/Source/Assets/Server/Notifications.Backend/Notifications.Backend/Views/PushNotification/Index.cshtml
@@ -9,7 +9,7 @@
 <script src="@Url.Content("~/Scripts/wns.index.js")" type="text/javascript"></script> 
   
 <h2>Push Notifications</h2>
-<p>You can use this page to generate and send push notifications to your registered Metro Style apps</p>
+<p>You can use this page to generate and send push notifications to your registered Style UI apps</p>
 
 <table class="left-aligned">
     <tr>
